[bugfix] g corner cut off

--- a/src/components/Journal/JournalComponents.css
+++ b/src/components/Journal/JournalComponents.css
@@ -42,7 +42,6 @@
     width: 90%;
     padding: 8px;
     padding-left: 12px;
-    border-radius: 20px;
     border: none;
     resize: none;
     overflow: auto;
